Make historical sums raw-only
